# claude-finance-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_demo.sh  setup_env.sh  setup_uv.sh
.github/workflows/: ci.yml  publish_ghcr.yml
benchmarks/finance_agent/: README.md  agent.py  run_benchmark.py  sample_questions.txt  tools.py
data/10k_2020_10_critical_sections/: 1137091_2020.json  1176334_2020.json  1290149_2020.json  1401835_2020.json  1404935_2020.json  1714367_2020.json  1718227_2020.json  36146_2020.json  37785_2020.json  731802_2020.json
docs/: README.md  reproducibility.md
docs/prompts/: prompt_combined.txt  prompt_competition.txt  prompt_competition_confidence.txt  prompt_fx.txt  prompt_inflation.txt  prompt_interest_rates.txt  prompt_mixed_sentiment.txt  prompt_outlook_performance.txt  prompt_regulation.txt  prompt_supply_chain.txt  prompt_trade_policy.txt
evaluation/: demo_outputs.jsonl  label_schema.json  repro_eval_1.json  repro_run_2.jsonl  sample_labels.jsonl  sample_labels_extended.jsonl  sample_predictions.jsonl
purple_agent/: README.md  server.py
scripts/: __init__.py  batch_analyzer.py  evaluate.py  finance_analyzer.py  generate_prompts.py  run_agent.py  scoring_rubric.py
tests/: test_clause_matching.py  test_concurrent_vs_sequential.py  test_evaluate.py  test_mcp.py  test_run_agent_adapter.py  test_scoring_rubric.py  test_sdk.py  test_single_agent.py  test_single_agent_from_finance.py  test_with_system_prompt.py
